--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bot
 spring.datasource.username=user
 spring.datasource.password=147
 telegram.bot.token=5520735954:AAG0dRBr-UuAr_24NTTGTW9mEHXRtT3yfGE
+
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
